Pretty happy with this

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,9 @@
         <tr>
             <td>{{ job.name }}</td>
             <td>{{ job.total_bytes or "N/A" }}</td>
-            <td>{{ job.job_status or "N/A" }}</td>
+            <td class="{% if job.job_status != 'T' %}flashing-error{% endif %}">
+                {{ job.job_status }}
+            </td>
             <td>{{ job.last_run_time or "N/A" }}</td>
             <td><a href="/job/{{ job.name }}">View Details</a></td>
         </tr>
