--- a/app/static/style.css
+++ b/app/static/style.css
@@ -33,3 +33,24 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+/* Flashing warning */
+.flashing-error {
+  animation: flash 1s infinite;
+  background-color: red;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+}
+
+@keyframes flash {
+  0% {
+    background-color: red;
+  }
+  50% {
+    background-color: darkred;
+  }
+  100% {
+    background-color: red;
+  }
+}
