--- a/app/static/style.css
+++ b/app/static/style.css
@@ -54,3 +54,19 @@ a:hover {
     background-color: red;
   }
 }
+
+/* Background/percentage bar */
+td {
+  padding: 8px;
+  position: relative;
+  border: 1px solid #ccc;
+  text-align: center;
+}
+
+td[data-percentage] {
+  background: linear-gradient(
+    to right,
+    rgb(177, 162, 0) var(--percentage),
+    transparent var(--percentage)
+  );
+}
