Add link to sourcecode

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
 
 <footer>
     No personal or secure data stored on or available via this tool. ONLY bacula logs.
+    <br><a href="https://github.com/KenwoodFox/bacula-flask">Find the source code here!</a>
 </footer>
 
 </html>
